--- a/client-admin/snapSkillzAdmin/package.json
+++ b/client-admin/snapSkillzAdmin/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
